--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <script src="js/models/movable-objects.class.js"></script>
     <script src="js/game.js"></script>
 </head>
-<body>
+<body onload="init()">
     <h1>El Pollo Loco</h1>
 
-    <canvas width="720" height="480">
+    <canvas width="720" height="480" id="canvas">
 
     </canvas>
 </body>
