--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <script src="js/models/movable-objects.class.js"></script>
+    <script src="js/models/character.class.js"></script>
+    <script src="js/models/chicken.class.js"></script>
     <script src="js/game.js"></script>
 </head>
 <body onload="init()">
