--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/models/movable-objects.class.js"></script>
     <script src="js/models/character.class.js"></script>
     <script src="js/models/chicken.class.js"></script>
+    <script src="js/models/world.class.js"></script>
     <script src="js/game.js"></script>
 </head>
 <body onload="init()">
