created static-object class

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="../img2/favicon.png">
     <title>Monster Munching Madness</title>
     <script src="js/models/movable-object.class.js"></script>
+    <script src="js/models/static-object.class.js"></script>
     <script src="js/models/character.class.js"></script>
     <script src="js/models/zombie.class.js"></script>
     <script src="js/models/monster.class.js"></script>
