added status-bar and drawable object class

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="../img2/favicon.png">
     <title>Monster Munching Madness</title>
+    <script src="js/models/drawable-object.class.js"></script>
     <script src="js/models/movable-object.class.js"></script>
-    <script src="js/models/gui-object.class.js"></script>
+    <script src="js/models/status-bar.class.js"></script>
     <script src="js/models/character.class.js"></script>
     <script src="js/models/zombie.class.js"></script>
     <script src="js/models/monster.class.js"></script>
