--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/models/statusbar-health.class.js"></script>
     <script src="js/models/statusbar-candy.class.js"></script>
     <script src="js/models/statusbar-bombs.class.js"></script>
+    <script src="js/models/statusbar-icons.class.js"></script>
     <script src="js/levels/level1.js"></script>
     <script src="js/game.js"></script>
 
