--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="js/models/statusbar-candy.class.js"></script>
     <script src="js/models/statusbar-bombs.class.js"></script>
     <script src="js/models/statusbar-icons.class.js"></script>
+    <script src="js/models/candy.class.js"></script>
+    <script src="js/models/bombs.class.js"></script>
     <script src="js/levels/level1.js"></script>
     <script src="js/game.js"></script>
 
