index.html: added pictures and description of game pad

--- a/index.html
+++ b/index.html
@@ -32,7 +32,22 @@
     <h1>Monster Munching Madness</h1>
 
     <canvas width="720" height="480" id="canvas">
-
     </canvas>
+
+    <div class="description">
+        <div class="keys">
+            <p>Move =</p>
+            <img src="img2/10_general_images/01_game_pad/arrow-keys.png" alt="">
+        </div>
+        <div class="keys">
+            <p>Jump =</p>
+            <img src="img2/10_general_images/01_game_pad/space-key.png" alt="">
+        </div>
+        <div class="keys">
+            <p>Throw Bombs =</p>
+            <img src="img2/10_general_images/01_game_pad/w-key.png" alt="">
+        </div>
+    </div>
+
 </body>
 </html>
