index and style.css: working on startscreen

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <body onload="init()">
     <h1>Monster Munching Madness</h1>
 
+    <div></div>
+
     <canvas width="720" height="480" id="canvas">
     </canvas>
 
@@ -46,6 +48,20 @@
         <div class="keys">
             <p>Throw Bombs =</p>
             <img src="img2/10_general_images/01_game_pad/w-key.png" alt="">
+        </div>
+    </div>
+
+    <div class="startscreen" id="startscreen">
+        <div class="upper-startscreen">
+            <div class="upper-startscreen-left">
+                How to play
+            </div>
+            <div class="upper-startscreen-right">
+                What's it about
+            </div>
+        </div>
+        <div class="lower-startscreen">
+            Enemies
         </div>
     </div>
 
