--- a/index.html
+++ b/index.html
@@ -31,14 +31,19 @@
 </head>
 
 <body onload="init()">
-    <h1>Monster Munching Madness</h1>
 
-    <div></div>
+    <div class="title-and-canvas">
+        <h1>Monster Munching Madness</h1>
+        <canvas width="720" height="480" id="canvas">
+        </canvas>
+        <div class="symbols, hidden" id="symbols">
+            <img src="img2/7_statusbars/3_icons/maximize (2).png" alt="fullscreen" onclick="fullscreen()" id="fullscreen">
+            <img src="img2/7_statusbars/3_icons/music-on.png" alt="music-on-off" onclick="toggleMusic()" id="music">
+            <img src="img2/7_statusbars/3_icons/sound-on.png" alt="sounds-on-off" onclick="toggleSound()" id="sound">
+        </div>
+    </div>
 
-    <canvas width="720" height="480" id="canvas">
-    </canvas>
-
-    <div class="description">
+    <div class="description hidden">
         <div class="keys">
             <p>Move =</p>
             <img src="img2/10_general_images/01_game_pad/arrow-keys.png" alt="">
@@ -74,12 +79,12 @@
             </div>
             <div class="upper-startscreen-right">
                 <h2>How to play</h2>
-                <p>It's Halloween and evil Zombies and Monsters rose from the dead.
-                Collect bombs and try throwing them at your enemies before they're able to kill you.<br>
-                You can also collect candy. It's Halloween after all.<br>
-                Be warned: a mighty laser shooting monster has been spotted.
-                Throwing multiple bombs at it might be helpful.<br>
-                Good luck adventurer and happy Trick or Treating!<br>
+                <p>As midnight descends on Halloween, the graveyard is roamed by evil zombies and monsters. &#129503;
+                Arm yourself with bombs &#128163; and throw them at your enemies to protect yourself and your loved ones.<br>
+                Don't forget to snatch up some candy &#127852; it's Halloween, after all!
+                But be aware: a mighty laser-shooting monster has been spotted. &#128064;
+                Throwing multiple bombs at it might be helpful. And now:
+                Good luck adventurer and happy trick-or-treating! &#128123;&#127875;<br>
                 </p>
             </div>
         </div>
@@ -95,7 +100,6 @@
             <div class="lower-startscreen-right">
                 <button id="startButton" onclick="startGame()"><p>Start Game</p></button>
             </div>
-
         </div>
     </div>
 
