index: deleted comma between symbols and hidden; character: changed images double-jump, added variable canDoubleJump, added doubleJump-Animation in setAnimationInterval; level.class.js: added updateLevel and keepGenerateBackground; movableObject: added speedX and doubleJump()-Method; world: added checkJumpOnMonster and checkJumpOnZombie in constructor and as functions on the end of sheet

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1>Monster Munching Madness</h1>
         <canvas width="720" height="480" id="canvas">
         </canvas>
-        <div class="symbols, hidden" id="symbols">
+        <div class="symbols hidden" id="symbols">
             <img src="img2/7_statusbars/3_icons/maximize_02.png" alt="enter-fullscreen" onclick="toggleFullscreen()" id="enterFullscreen">
             <img src="img2/7_statusbars/3_icons/music-on.png" alt="music-on-off" onclick="toggleMusic()" id="music">
             <img src="img2/7_statusbars/3_icons/sound-on.png" alt="sounds-on-off" onclick="toggleSound()" id="sound">
