added endboss statusbar class and added statusbar icons endboss;

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="js/models/level.class.js"></script>
     <script src="js/models/endboss.class.js"></script>
     <script src="js/models/throwable-object.class.js"></script>
+    <script src="js/models/statusbar-endboss.class.js"></script>
     <script src="js/models/statusbar-health.class.js"></script>
     <script src="js/models/statusbar-candy.class.js"></script>
     <script src="js/models/statusbar-bombs.class.js"></script>
