--- a/index.html
+++ b/index.html
@@ -32,20 +32,69 @@
 </head>
 
 <body onload="init()">
-
-    <div class="titleandcanvas" id="titleandcanvas">
-        <h1 id="title">Monster Munching Madness</h1>
+    <div class="game" id="game">
+        <h1 class="title" id="title">Monster Munching Madness</h1>
         <canvas width="720" height="480" id="canvas">
         </canvas>
-        <div class="symbols hidden" id="symbols">
+        <div class="symbols d-none" id="symbols" anchor="canvas">
             <img src="img2/7_statusbars/3_icons/maximize_02.png" alt="enter-fullscreen" onclick="toggleFullscreen()"
                 id="enterFullscreen">
             <img src="img2/7_statusbars/3_icons/music-on.png" alt="music-on-off" onclick="toggleMusic()" id="music">
             <img src="img2/7_statusbars/3_icons/sound-on.png" alt="sounds-on-off" onclick="toggleSound()" id="sound">
         </div>
+        <div class="startscreen" id="startscreen">
+            <div class="upper-startscreen">
+                <div class="upper-startscreen-left">
+                    <h2>Controls</h2>
+                    <table>
+                        <tr>
+                            <td>Move</td>
+                            <td><img src="img2/10_general_images/01_game_pad/arrow-keys.png" alt="arrow-keys"></td>
+                        </tr>
+                        <tr>
+                            <td>Jump</td>
+                            <td><img src="img2/10_general_images/01_game_pad/space-key.png" alt="space-key"></td>
+                        </tr>
+                        <tr>
+                            <td>Throw</td>
+                            <td><img src="img2/10_general_images/01_game_pad/w-key.png" alt="w-key"></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="upper-startscreen-right">
+                    <h2>How to play</h2>
+                    <p>As midnight descends on Halloween, the graveyard is roamed by evil zombies and monsters.
+                        &#129503;
+                        Arm yourself with bombs &#128163; and throw them at your enemies to protect yourself and your
+                        loved
+                        ones.<br>
+                        Don't forget to snatch up some candy &#127852; it's Halloween, after all!
+                        But be aware: a mighty laser-shooting monster has been spotted. &#128064;
+                        Throwing multiple bombs at it might be helpful. And now:
+                        Good luck adventurer and happy trick-or-treating! &#128123;&#127875;<br>
+                    </p>
+                </div>
+            </div>
+            <div class="lower-startscreen">
+                <div class="lower-startscreen-left">
+                    <h2>Enemies</h2>
+                    <div class="enemy-images">
+                        <img src="img2/9_intro_outro_screens/start/startscreen-monster.png" alt="">
+                        <img src="img2/9_intro_outro_screens/start/startscreen-zombie.png" alt="">
+                        <img src="img2/9_intro_outro_screens/start/startscreen-endboss.png" alt="">
+                    </div>
+                </div>
+                <div class="lower-startscreen-right">
+                    <button id="startButton" onclick="startGame()">
+                        <p>Start Game</p>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="endscreen d-none" id="endscreen">
+        </div>
     </div>
-
-    <div class="description hidden" id="description">
+    <div class="description d-none" id="description">
         <div class="keys">
             <p>Move =</p>
             <img src="img2/10_general_images/01_game_pad/arrow-keys.png" alt="">
@@ -59,57 +108,6 @@
             <img src="img2/10_general_images/01_game_pad/w-key.png" alt="">
         </div>
     </div>
-
-    <div class="startscreen" id="startscreen">
-        <div class="upper-startscreen">
-            <div class="upper-startscreen-left">
-                <h2>Controls</h2>
-                <table>
-                    <tr>
-                        <td>Move</td>
-                        <td><img src="img2/10_general_images/01_game_pad/arrow-keys.png" alt="arrow-keys"></td>
-                    </tr>
-                    <tr>
-                        <td>Jump</td>
-                        <td><img src="img2/10_general_images/01_game_pad/space-key.png" alt="space-key"></td>
-                    </tr>
-                    <tr>
-                        <td>Throw</td>
-                        <td><img src="img2/10_general_images/01_game_pad/w-key.png" alt="w-key"></td>
-                    </tr>
-                </table>
-            </div>
-            <div class="upper-startscreen-right">
-                <h2>How to play</h2>
-                <p>As midnight descends on Halloween, the graveyard is roamed by evil zombies and monsters. &#129503;
-                    Arm yourself with bombs &#128163; and throw them at your enemies to protect yourself and your loved
-                    ones.<br>
-                    Don't forget to snatch up some candy &#127852; it's Halloween, after all!
-                    But be aware: a mighty laser-shooting monster has been spotted. &#128064;
-                    Throwing multiple bombs at it might be helpful. And now:
-                    Good luck adventurer and happy trick-or-treating! &#128123;&#127875;<br>
-                </p>
-            </div>
-        </div>
-        <div class="lower-startscreen">
-            <div class="lower-startscreen-left">
-                <h2>Enemies</h2>
-                <div class="enemy-images">
-                    <img src="img2/9_intro_outro_screens/start/startscreen-monster.png" alt="">
-                    <img src="img2/9_intro_outro_screens/start/startscreen-zombie.png" alt="">
-                    <img src="img2/9_intro_outro_screens/start/startscreen-endboss.png" alt="">
-                </div>
-            </div>
-            <div class="lower-startscreen-right">
-                <button id="startButton" onclick="startGame()">
-                    <p>Start Game</p>
-                </button>
-            </div>
-        </div>
-    </div>
-    <div class="endscreen d-none" id="endscreen">
-    </div>
-
 </body>
 
 </html>
