added mobile buttons

--- a/index.html
+++ b/index.html
@@ -36,11 +36,17 @@
         <h1 class="title" id="title">Monster Munching Madness</h1>
         <canvas width="720" height="480" id="canvas">
         </canvas>
-        <div class="symbols d-none" id="symbols" anchor="canvas">
+        <div class="symbols d-none" id="symbols">
             <img src="img2/7_statusbars/3_icons/maximize_02.png" alt="enter-fullscreen" onclick="toggleFullscreen()"
                 id="enterFullscreen">
             <img src="img2/7_statusbars/3_icons/music-on.png" alt="music-on-off" onclick="toggleMusic()" id="music">
             <img src="img2/7_statusbars/3_icons/sound-on.png" alt="sounds-on-off" onclick="toggleSound()" id="sound">
+        </div>
+        <div class="mobile-buttons" id="mobile-buttons">
+            <img src="img2/10_general_images/01_game_pad/arrow-left.png" alt="go-left" id="go-left">
+            <img src="img2/10_general_images/01_game_pad/arrow-right.png" alt="go-right" id="go-right">
+            <img src="img2/10_general_images/01_game_pad/space-key.png" alt="jump" id="jump">
+            <img src="img2/10_general_images/01_game_pad/w-key.png" alt="throw-bomb" id="throw">
         </div>
         <div class="startscreen" id="startscreen">
             <div class="upper-startscreen">
