--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src="img2/7_statusbars/3_icons/music-on.png" alt="music-on-off" onclick="toggleMusic()" id="music">
             <img src="img2/7_statusbars/3_icons/sound-on.png" alt="sounds-on-off" onclick="toggleSound()" id="sound">
         </div>
-        <div class="mobile-buttons" id="mobile-buttons">
+        <div class="mobilebuttons" id="mobilebuttons">
             <img src="img2/10_general_images/01_game_pad/arrow-left.png" alt="go-left" id="go-left">
             <img src="img2/10_general_images/01_game_pad/arrow-right.png" alt="go-right" id="go-right">
             <img src="img2/10_general_images/01_game_pad/space-key.png" alt="jump" id="jump">
