added css and styled some divs

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
         </div>
         <div class="endscreen d-none" id="endscreen">
         </div>
+        <div id="rotateDeviceMessage" class="rotateDeviceMessage d-none">
+            <img src="img2/10_general_images/rotate.png" alt="please-rotate-device-message">
+        </div>
     </div>
     <div class="description d-none" id="description">
         <div class="keys">
