--- a/index.html
+++ b/index.html
@@ -37,17 +37,21 @@
         <canvas width="720" height="480" id="canvas">
         </canvas>
         <div class="symbols d-none" id="symbols">
-            <img src="img/7_statusbars/3_icons/maximize_02.png" alt="enter-fullscreen" onclick="toggleFullscreen()"
-                id="enterFullscreen">
+            <img src="img/7_statusbars/3_icons/maximize_02.png" alt="Toggle Fullscreen" onclick="toggleFullscreen()" id="fullscreenToggle" class="enterFullscreen">
             <img src="img/7_statusbars/3_icons/music-on.png" alt="music-on-off" onclick="toggleMusic()" id="music">
             <img src="img/7_statusbars/3_icons/sound-on.png" alt="sounds-on-off" onclick="toggleSound()" id="sound">
         </div>
         <div class="mobilebuttons" id="mobilebuttons">
-            <img src="img/10_general_images/01_game_pad/arrow-left.png" alt="go-left" id="go-left">
-            <img src="img/10_general_images/01_game_pad/arrow-right.png" alt="go-right" id="go-right">
-            <img src="img/10_general_images/01_game_pad/space-key.png" alt="jump" id="jump">
-            <img src="img/10_general_images/01_game_pad/w-key.png" alt="throw-bomb" id="throw">
+            <div class="mobilebuttons-left">
+                <img src="img/10_general_images/01_game_pad/arrow-left.png" alt="go-left" id="go-left">
+                <img src="img/10_general_images/01_game_pad/arrow-right.png" alt="go-right" id="go-right">
+            </div>
+            <div class="mobilebuttons-right">
+                <img src="img/10_general_images/01_game_pad/space-key.png" alt="jump" id="jump">
+                <img src="img/10_general_images/01_game_pad/w-key.png" alt="throw-bomb" id="throw">
+            </div>
         </div>
+
         <div class="startscreen" id="startscreen">
             <div class="upper-startscreen">
                 <div class="upper-startscreen-left">
